src/sass/contact.sass
#contact
    width: 60%
    margin: 300px auto
    position: relative
    text-align: center

    h3
        font-size: 2.5rem
    

ul#contact-links
    list-style: none
    display: flex
    flex-wrap: wrap
    justify-content: center

    li
        margin-right: 0
        font-size: 1.25rem

        &:after
            content: "/"
            margin-right: 10px
            margin-left: 10px
            color: $redorange-light

        &:last-of-type:after
            content: none

    a
        color: $mid-blue

        &:hover
            color: $sailwind-blue

@media (max-width: 768px)
    #contact
        width: 80%
        margin: 200px auto

@media (max-width: 600px)
    #contact
        margin: 200px auto 100px

